feat: added calls for put and deleting of tasks.
