# server/api/services/schemas/task.schema.js
@@ -1,31 +1,29 @@
 import mongoose from 'mongoose';
 
-let TaskSchema = new mongoose.Schema(
-  {
-    project: {
-      type: String,
-      required: false,
-      trim: true,
-    },
-    email: {
-      type: String,
-      required: true,
-      trim: true,
-    },
-    text: {
-      type: String,
-      required: true,
-      trim: true,
-    },
-    createdTime: {
-      type: Date,
-      required: true,
-      trim: true,
-    },
+let TaskSchema = new mongoose.Schema({
+  project: {
+    type: String,
+    required: false,
+    trim: true,
   },
-  { collection: 'tasks' }
-);
+  email: {
+    type: String,
+    required: true,
+    trim: true,
+    index: true,
+  },
+  text: {
+    type: String,
+    required: true,
+    trim: true,
+  },
+  createdTime: {
+    type: Date,
+    required: true,
+    trim: true,
+  },
+});
 
-const TaskModel = mongoose.model('Task', TaskSchema);
+const TaskModel = mongoose.model('Task', TaskSchema, 'tasks');
 
 export default TaskModel;
